feat: Add TournamentRegistrationRepository and service for managing tournament registrations
feat: Enhance TournamentRepository with queries for active scheduled and in-progress tournaments

feat: Implement BranchService for CRUD operations on branches

refactor: Update DashboardService to include detailed tournament and player data

refactor: Modify ExcelServiceImpl to remove round handling logic

refactor: Revise ResultService to streamline result mapping and validation

delete: Remove RoundService as its functionality is no longer needed

feat: Create TournamentRegistrationService for handling tournament registrations

feat: Update TournamentService to manage branches associated with tournaments

test: Update DashboardServiceTest and ResultServiceTest to reflect DTO changes

test: Remove unused Round references in service tests