@@ -1,8 +1,6 @@
 package com.bowlingpoints.service;
 
 import com.bowlingpoints.dto.*;
-import com.bowlingpoints.dto.response.CategoriesDTO;
-import com.bowlingpoints.dto.response.ModalitiesDTO;
 import com.bowlingpoints.entity.Tournament;
 import com.bowlingpoints.repository.AmbitRepository;
 import com.bowlingpoints.repository.ClubRepository;
@@ -12,9 +10,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -25,66 +21,126 @@ public class DashboardService {
     private final ClubRepository clubRepository;
     private final AmbitRepository ambitRepository;
 
+    /**
+     * Retorna todos los datos del dashboard:
+     * - Torneos programados o aplazados
+     * - Torneos en curso
+     * - Top 10 jugadores
+     * - Ámbitos activos con torneos
+     */
     public DashboardDTO getDashboardData() {
-        // Trae solo torneos activos y no eliminados
-        List<TournamentDTO> activeTournaments = tournamentRepository.findAllByStatusTrueAndDeletedAtIsNull()
+
+        // ✅ Torneos activos con estado Programado o Aplazado
+        List<TournamentDTO> scheduledOrPostponed = tournamentRepository
+                .findActiveScheduledOrPostponed()
                 .stream()
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
 
-        List<PlayerRankingDTO> topPlayers = resultRepository.findTopPlayersByAvgScore(PageRequest.of(0, 10));
+        // ✅ Torneos activos con estado En curso
+        List<TournamentDTO> inProgress = tournamentRepository
+                .findActiveInProgress()
+                .stream()
+                .map(this::toDTO)
+                .toList();
 
-        List<ClubDashboardDTO> topClubs = resultRepository.findTopClubsRaw().stream()
-                .map(row -> ClubDashboardDTO.builder()
-                        .clubId(((Number) row[0]).intValue())
-                        .name((String) row[1])
-                        .totalScore(row[2] != null ? ((Number) row[2]).intValue() : 0)
-                        .build())
-                .collect(Collectors.toList());
-
+        // ✅ Ámbitos que tengan al menos un torneo asociado
         List<AmbitDTO> ambits = ambitRepository.findDistinctWithTournaments();
 
+        // ✅ Top 10 jugadores por promedio de puntaje
+        List<DashboardPlayerDTO> topPlayers = resultRepository.findTopPlayersByAvgScore(PageRequest.of(0, 10));
+
+        // ✅ Construcción del objeto principal del Dashboard
         return DashboardDTO.builder()
-                .activeTournaments(activeTournaments)
+                .scheduledOrPostponedTournaments(scheduledOrPostponed)
+                .inProgressTournaments(inProgress)
                 .topPlayers(topPlayers)
-                .topClubs(topClubs)
                 .ambits(ambits)
                 .build();
     }
 
-    // Este método convierte un Tournament a TournamentDTO incluyendo nombres de categorías y modalidades
-    private TournamentDTO toDTO(Tournament entity) {
-        List<CategoriesDTO> categoriesDTOS = entity.getCategories() != null
-                ? entity.getCategories().stream()
-                .map(tc -> new CategoriesDTO(
-                        tc.getCategory().getCategoryId(),
-                        tc.getCategory().getName()
-                ))
-                .toList()
-                : Collections.emptyList();
-
-        List<ModalitiesDTO> modalitiesDTOS = entity.getModalities() != null
-                ? entity.getModalities().stream()
-                .map(tc -> new ModalitiesDTO(
-                        tc.getModality().getModalityId(),
-                        tc.getModality().getName()
-                ))
-                .toList()
-                : Collections.emptyList();
-
+    /**
+     * Convierte una entidad Tournament a su DTO completo,
+     * incluyendo categorías y modalidades asociadas.
+     */
+    private TournamentDTO toDTO(Tournament tournament) {
         return TournamentDTO.builder()
-                .tournamentId(entity.getTournamentId())
-                .name(entity.getName())
-                .ambitId(entity.getAmbit() != null ? entity.getAmbit().getAmbitId() : null)
-                .ambitName(entity.getAmbit() != null ? entity.getAmbit().getName() : null)
-                .imageUrl(entity.getImageUrl())
-                .startDate(entity.getStartDate())
-                .endDate(entity.getEndDate())
-                .location(entity.getLocation())
-                .stage(entity.getStage())
-                .status(entity.getStatus())
-                .modalities(modalitiesDTOS)
-                .categories(categoriesDTOS)
+                .tournamentId(tournament.getTournamentId())
+                .name(tournament.getName())
+                .organizer(tournament.getOrganizer())
+                .ambitId(tournament.getAmbit() != null ? tournament.getAmbit().getAmbitId() : null)
+                .ambitName(tournament.getAmbit() != null ? tournament.getAmbit().getName() : null)
+                .imageUrl(tournament.getImageUrl())
+                .startDate(tournament.getStartDate())
+                .endDate(tournament.getEndDate())
+                .location(tournament.getLocation())
+                .stage(tournament.getStage())
+                .status(tournament.getStatus())
+
+                // ✅ IDs de categorías
+                .categoryIds(
+                        tournament.getCategories() != null
+                                ? tournament.getCategories().stream()
+                                .map(tc -> tc.getCategory().getCategoryId())
+                                .toList()
+                                : null
+                )
+
+                // ✅ Nombres de categorías
+                .categoryNames(
+                        tournament.getCategories() != null
+                                ? tournament.getCategories().stream()
+                                .map(tc -> tc.getCategory().getName())
+                                .toList()
+                                : null
+                )
+
+                // ✅ Objetos completos de categorías
+                .categories(
+                        tournament.getCategories() != null
+                                ? tournament.getCategories().stream()
+                                .map(tc -> CategoryDTO.builder()
+                                        .categoryId(tc.getCategory().getCategoryId())
+                                        .name(tc.getCategory().getName())
+                                        .description(tc.getCategory().getDescription())
+                                        .status(tc.getCategory().getStatus())
+                                        .build())
+                                .toList()
+                                : null
+                )
+
+                // ✅ IDs de modalidades
+                .modalityIds(
+                        tournament.getModalities() != null
+                                ? tournament.getModalities().stream()
+                                .map(tm -> tm.getModality().getModalityId())
+                                .toList()
+                                : null
+                )
+
+                // ✅ Nombres de modalidades
+                .modalityNames(
+                        tournament.getModalities() != null
+                                ? tournament.getModalities().stream()
+                                .map(tm -> tm.getModality().getName())
+                                .toList()
+                                : null
+                )
+
+                // ✅ Objetos completos de modalidades
+                .modalities(
+                        tournament.getModalities() != null
+                                ? tournament.getModalities().stream()
+                                .map(tm -> ModalityDTO.builder()
+                                        .modalityId(tm.getModality().getModalityId())
+                                        .name(tm.getModality().getName())
+                                        .description(tm.getModality().getDescription())
+                                        .status(tm.getModality().getStatus())
+                                        .build())
+                                .toList()
+                                : null
+                )
+
                 .build();
     }
 }
